--- a/styles/character.module.css
+++ b/styles/character.module.css
@@ -1,7 +1,13 @@
 
 .color{
-  background-color: #f7c23c;
+  background-color:  #fdf6e4;
+
+  /* background-color:  #f5f8f9; */
+/*
+  background-color: #f7c23c; */
 }
+
+
 
 .padding_6{
   padding: 5rem 8%;
