--- a/styles/movie.module.css
+++ b/styles/movie.module.css
@@ -4,10 +4,20 @@
 }
 
 .movie_css{
-  width: 64%;
-  height: 54vh;
+  aspect-ratio: 16/9;
+  width: 50%;
+  height: 50%;
 }
 
 .padding_6{
   padding: 5rem 8%;
+}
+
+@media screen and (max-width:768px){
+
+  .movie_css{
+    aspect-ratio: 16/9;
+    width: 100%;
+    height: 100%;
+  }
 }
