--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -5,6 +5,11 @@
   background-color: #329a5f;
 }
 
+.section_title{
+  font-family: 'Montserrat', sans-serif;
+
+}
+
 
 .padding_6{
   padding: 5rem 8%;
