--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,5 +1,3 @@
-
-
 .color{
   color: #fcfffd;
   background-color: #329a5f;
@@ -7,13 +5,40 @@
 
 .section_title{
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
+}
 
+.icons{
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: center;
+}
+
+.icons > a{
+  margin: 0 4%
 }
 
 
 .padding_6{
   padding: 5rem 8%;
-  padding-bottom: 1.8rem;
-  padding-top: 1.8rem;
+  padding-bottom: 1.6rem;
+  padding-top: 1.6rem;
 }
 
+@media screen and (min-width:768px){
+
+  .d_flex{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .icons{
+    font-size: 1.8rem;
+    padding-top: 1.4rem;
+  }
+
+  .icons > a{
+    margin-left: 1.6rem;
+  }
+
+}
